--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Reset default styles and set base styles */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -29,7 +28,7 @@ nav {
 .logo-text {
   font-size: 24px;
   font-weight: bold;
-  color: white; /* Adjust color as needed */
+  color: white;
 }
 
 .search {
@@ -38,7 +37,7 @@ nav {
   font-size: 16px;
   border: none;
   border-radius: 4px;
-  box-sizing: border-box; /* Ensure padding is included in width */
+  box-sizing: border-box;
 }
 
 .row {
@@ -56,8 +55,8 @@ nav {
   border-radius: 8px;
 }
 
-h2 {
-  font-size: 20px;
+h2, h3, p {
+  font-size: 17px;
   margin-bottom: 10px;
 }
 
@@ -69,6 +68,7 @@ ul {
 li {
   padding: 10px 0;
   border-bottom: 1px solid #ddd;
+  font-size: 13px;
 }
 
 strong {
@@ -98,7 +98,6 @@ button:hover {
   padding: 0;
 }
 
-/* Media query for responsiveness */
 @media (max-width: 768px) {
   .container {
     margin: 10px;
