--- a/src/App.css
+++ b/src/App.css
@@ -22,13 +22,18 @@ nav {
 }
 
 .logo-container {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.logo-text {
-  font-size: 24px;
+.logo {
+  height: 40px;
+}
+
+.word-logo {
+  font-size: 16px;
   font-weight: bold;
-  color: white;
 }
 
 .search {
